--- a/d10/Cargo.toml
+++ b/d10/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
-indicatif = { version = "0.18.3", features = ["rayon"] }
 itertools = "0.14.0"
+microlp = "0.2.11"
 rayon = "1.11.0"
 winnow = "0.7.14"
